--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.5",
     "date-fns": "^2.30.0",
     "next": "14.0.3",
